# Trust-Receipts

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md  service-bootstrap.tgz.b64
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  implementation_feedback.yml  (+1 more)
browser/: README.md
demo-worker/: DEPLOYMENT_TRIGGER.md  README.md  package.json  wrangler.jsonc
docs/: PUBLIC_CLAIMS.md  THREAT_MODEL_v0.1.md  Trust_Receipt_Technical_Specification_v0.1.1.md  Trust_Receipt_Technical_Specification_v0.1.md  index.html
evidence/: conformance-report.json  conformance-report.md  example-receipt.json  example-receipt.txt  release-verification.json
fixtures/: action-request.valid.json  authority-grant.valid.json  browser-digest-vectors.json  conformance-cases.json  material-evidence.valid.json
profiles/: conformance-profile.v0.1.json
release/: PACKAGE_MANIFEST.json  PACKAGE_README.md  PACKAGE_SHA256SUMS.txt  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SHA256SUMS_REPOSITORY.txt
schemas/: action-request.schema.json  authority-grant.schema.json  conformance-assessment.schema.json  material-evidence.schema.json  trust-receipt.schema.json
service/: .dev.vars.example  PRODUCTION_READINESS.md  README.md  openapi.json  package.json  wrangler.toml
tests/: test_harness.py  test_terminal_user_denial.py
tools/: build_release.py  pdf-header.tex  verify_browser_parity.mjs  verify_release.py
(+57 files in other folders)
