[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-receipt-reference"
version = "0.1.0"
description = "Candidate reference implementation and conformance harness for AI Trust Receipts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Brittany Wright"}]
dependencies = []

[project.scripts]
trust-receipt = "trust_receipt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/trust-receipt/schemas" = ["schemas/*.json"]
"share/trust-receipt/profiles" = ["profiles/*.json"]
